worked with header

--- a/index.html
+++ b/index.html
@@ -4,17 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./main.min.css">
     <title>Beauty Zone</title>
 </head>
 
 <body>
-    <header class="header"></header>
-    <section class="hero-section"></section>
-    <section class="introduction-section"></section>
-    <section class="advantages-section"></section>
-    <section class="procedures-section"></section>
-    <section class="contacts-section"></section>
+    <header class="header">
+        <div class="container">
+            <div class="header__container">
+                <div class="logo">Beauty <span>Zone</span></div>
+                <ul class="header__menu">
+                    <li class="header__menu-link">Про нас</li>
+                    <li class="header__menu-link">Чому ми</li>
+                    <li class="header__menu-link">Наші процедури</li>
+                    <li class="header__menu-link">Контакти</li>
+                </ul>
+                <div class="header__socials">
+                    <a class="header__socials-link" href="tel:+38(096)0000007">
+                        <svg class="header__socials-icon" width="32" , height="32">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                    <a class="header__socials-link" href="#">
+                        <svg class="header__socials-icon" width="32" , height="32">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg></a>
+                    <a class="header__socials-link" href="#">
+                        <svg class="header__socials-icon" width="32     " , height="32">
+                            <use href="./images/sprite.svg#icon-phone"></use>
+                        </svg></a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="hero-section">
+        <div class="container">
+            <div class="hero-section__container">
+                <button class="button" type="button">Замовити дзвінок</button>
+            </div>
+        </div>
+    </section>
+    <section class="about-section">
+        <div class="container">
+
+        </div>
+    </section>
+    <section class="advantages-section">
+        <div class="container">
+
+        </div>
+    </section>
+    <section class="procedures-section">
+        <div class="container">
+
+        </div>
+    </section>
+    <section class="contacts-section">
+        <div class="container">
+
+        </div>
+    </section>
     <footer> </footer>
 
 </body>
