--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     <section class="hero-section">
         <div class="container">
             <div class="hero-section__container">
-                <button class="button" type="button">Замовити дзвінок</button>
+                <p>Косметологічна клініка</p>
+                <h1 class="hero-section__title">beauty <br>zone</h1>
+                <button class="button hero-section__button" type="button">Замовити дзвінок</button>
+                <p class="hero-section__text">Запишись та отримай безкоштовну<br> консультацію нашого косметолога</p>
             </div>
         </div>
     </section>
