done with hero-section

--- a/index.html
+++ b/index.html
@@ -34,20 +34,25 @@
                             <use href="./images/sprite.svg#icon-phone"></use>
                         </svg></a>
                 </div>
+                <button class="header__burger menu-btn-open" type="button">
+                    <svg width="24" height="24">
+                        <use href="./images/sprite.svg#icon-menu"></use>
+                    </svg>
+                </button>
             </div>
         </div>
     </header>
     <section class="hero-section">
         <div class="container">
             <div class="hero-section__container">
-                <p>Косметологічна клініка</p>
-                <h1 class="hero-section__title">beauty <br>zone</h1>
+                <p class="hero-section__primary-text">Косметологічна клініка</p>
+                <h1 class="hero-section__title">beauty zone</h1>
                 <button class="button hero-section__button" type="button">Замовити дзвінок</button>
                 <p class="hero-section__text">Запишись та отримай безкоштовну<br> консультацію нашого косметолога</p>
             </div>
         </div>
     </section>
-    <section class="about-section">
+    <!-- <section class="about-section">
         <div class="container">
 
         </div>
@@ -67,7 +72,7 @@
 
         </div>
     </section>
-    <footer> </footer>
+    <footer> </footer> -->
 
 </body>
 
