--- a/index.html
+++ b/index.html
@@ -39,6 +39,37 @@
                         <use href="./images/sprite.svg#icon-menu"></use>
                     </svg>
                 </button>
+                <div class="mobile-menu">
+                    <div class="mobile-menu__container">
+                        <button class="mobile-menu__btn-close menu-btn-close" type="button">
+                            <svg class="icon-close" width="32" , height="32">
+                                <use href="./images/sprite.svg#icon-close"></use>
+                            </svg>
+                        </button>
+                        <div class="logo">Beauty <span>Zone</span></div>
+                        <ul class="mobile-menu__list">
+                            <li class="header__menu-link">Про нас</li>
+                            <li class="header__menu-link">Чому ми</li>
+                            <li class="header__menu-link">Наші процедури</li>
+                            <li class="header__menu-link">Контакти</li>
+                        </ul>
+                        <div class="header__socials">
+                            <a class="header__socials-link" href="tel:+38(096)0000007">
+                                <svg class="header__socials-icon" width="32" , height="32">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                            <a class="header__socials-link" href="#">
+                                <svg class="header__socials-icon" width="32" , height="32">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg></a>
+                            <a class="header__socials-link" href="#">
+                                <svg class="header__socials-icon" width="32     " , height="32">
+                                    <use href="./images/sprite.svg#icon-phone"></use>
+                                </svg></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -46,7 +77,7 @@
         <div class="container">
             <div class="hero-section__container">
                 <p class="hero-section__primary-text">Косметологічна клініка</p>
-                <h1 class="hero-section__title">beauty zone</h1>
+                <h1 class="hero-section__title">beauty <span>Zone</span></h1>
                 <button class="button hero-section__button" type="button">Замовити дзвінок</button>
                 <p class="hero-section__text">Запишись та отримай безкоштовну<br> консультацію нашого косметолога</p>
             </div>
@@ -73,7 +104,7 @@
         </div>
     </section>
     <footer> </footer> -->
-
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
