--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="header__container">
                 <div class="logo">Beauty <span>Zone</span></div>
                 <ul class="header__menu">
-                    <li class="header__menu-link">Про нас</li>
-                    <li class="header__menu-link">Чому ми</li>
-                    <li class="header__menu-link">Наші процедури</li>
-                    <li class="header__menu-link">Контакти</li>
+                    <li class="link">Про нас</li>
+                    <li class="link">Чому ми</li>
+                    <li class="link">Наші процедури</li>
+                    <li class="link">Контакти</li>
                 </ul>
                 <div class="header__socials">
                     <a class="header__socials-link" href="tel:+38(096)0000007">
@@ -46,25 +46,25 @@
                                 <use href="./images/sprite.svg#icon-close"></use>
                             </svg>
                         </button>
-                        <div class="logo">Beauty <span>Zone</span></div>
+                        <div class="mobile-menu__logo logo">Beauty<span>Zone</span></div>
                         <ul class="mobile-menu__list">
-                            <li class="header__menu-link">Про нас</li>
-                            <li class="header__menu-link">Чому ми</li>
-                            <li class="header__menu-link">Наші процедури</li>
-                            <li class="header__menu-link">Контакти</li>
+                            <li class="mobile-menu__link link">Про нас</li>
+                            <li class="mobile-menu__link link">Чому ми</li>
+                            <li class="mobile-menu__link link">Наші процедури</li>
+                            <li class="mobile-menu__link link">Контакти</li>
                         </ul>
-                        <div class="header__socials">
-                            <a class="header__socials-link" href="tel:+38(096)0000007">
-                                <svg class="header__socials-icon" width="32" , height="32">
+                        <div class="mobile-menu__socials">
+                            <a href="tel:+38(096)0000007">
+                                <svg class="socials-icon" width="32" , height="32">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
-                            <a class="header__socials-link" href="#">
-                                <svg class="header__socials-icon" width="32" , height="32">
+                            <a href="#">
+                                <svg class="socials-icon" width="32" , height="32">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg></a>
-                            <a class="header__socials-link" href="#">
-                                <svg class="header__socials-icon" width="32     " , height="32">
+                            <a href="#">
+                                <svg class="socials-icon" width="32     " , height="32">
                                     <use href="./images/sprite.svg#icon-phone"></use>
                                 </svg></a>
                         </div>
@@ -83,27 +83,47 @@
             </div>
         </div>
     </section>
-    <!-- <section class="about-section">
+    <section class="about-section">
+        <div class="container">
+            <div class="about-section__container">
+                <div class="about-section__info">
+                    <h2 class="about-section__title">Перевтілюйтесь в <span class="text-brand">beauty zone!</span></h2>
+                    <p class="about-section__text">Наша косметологічна клініка пропонує вам професійні послуги
+                        з догляду за шкірою обличчя та тіла.</p>
+                    <p class="about-section__text">B beauty zone ми гарантуємо найвищі стандарти якості<br> та приємний
+                        сервіс. Наші косметологічні
+                        процедури та
+                        препарати допоможуть вам підтримувати свою красу та молодість. <br>З нами краса назавжди!>
+                    </p>
+                </div>
+                <div class="about-section__photo">
+                    <img class="about-section__photo-before" src="./images/woman-before-procedures.jpg"
+                        alt="Зображення шкіри до проведення процедури омолодження">
+                    <img class="about-section__photo-after" src="./images/woman-after-procedures.jpg"
+                        alt="Зображення шкіри після проведення процедури омолодження">
+                    <img class="about-section__blue-star" src="./images/blue-star.png" alt="Блакитна фонова зірка">
+                    <img class="about-section__dark-star" src="./images/dark-star.png" alt="Темна фонова зірка">
+                    <img class="about-section__grey-star" src="./images/grey-star.png" alt="Сіра фонова зірка">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <section class="advantages-section">
         <div class="container">
 
         </div>
-    </section>
-    <section class="advantages-section">
+    </section> -->
+    <!-- <section class="procedures-section">
         <div class="container">
 
         </div>
-    </section>
-    <section class="procedures-section">
+    </section> -->
+    <!-- <section class="contacts-section">
         <div class="container">
 
         </div>
-    </section>
-    <section class="contacts-section">
-        <div class="container">
-
-        </div>
-    </section>
-    <footer> </footer> -->
+    </section> -->
+    <!-- <footer> </footer> -->
     <script src="./js/mobile-menu.js"></script>
 </body>
 
