--- a/index.html
+++ b/index.html
@@ -108,11 +108,27 @@
             </div>
         </div>
     </section>
-    <!-- <section class="advantages-section">
+    <section class="advantages-section">
         <div class="container">
-
+            <div class="advantages-section__container">
+                <img class="advantages-section__background" src="./images/advantages-bg.png" alt="Блакитний градієнт">
+                <h2 class="advantages-section__title">Чому люди <br><span class="text-brand--lowercase">обирають
+                        нас</span>
+                </h2>
+                <div class="advantages-section__cards">
+                    <div class="advantages-section__card">
+                        <p>Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5 років</p>
+                    </div>
+                    <div class="advantages-section__card">
+                        <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
+                    </div>
+                    <div class="advantages-section__card">
+                        <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="procedures-section">
         <div class="container">
 
