start working with procedured section

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 </ul>
                 <div class="header__socials">
                     <a class="header__socials-link" href="tel:+38(096)0000007">
-                        <svg class="header__socials-icon" width="32" , height="32">
+                        <svg class="socials" width="32" , height="32">
                             <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                     <a class="header__socials-link" href="#">
-                        <svg class="header__socials-icon" width="32" , height="32">
+                        <svg class="socials" width="32" , height="32">
                             <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg></a>
                     <a class="header__socials-link" href="#">
-                        <svg class="header__socials-icon" width="32     " , height="32">
+                        <svg class="socials" width="32" , height="32">
                             <use href="./images/sprite.svg#icon-phone"></use>
                         </svg></a>
                 </div>
@@ -55,16 +55,16 @@
                         </ul>
                         <div class="mobile-menu__socials">
                             <a href="tel:+38(096)0000007">
-                                <svg class="socials-icon" width="32" , height="32">
+                                <svg class="socials" width="32" , height="32">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                             <a href="#">
-                                <svg class="socials-icon" width="32" , height="32">
+                                <svg class="socials" width="32" , height="32">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg></a>
                             <a href="#">
-                                <svg class="socials-icon" width="32     " , height="32">
+                                <svg class="socials" width="32     " , height="32">
                                     <use href="./images/sprite.svg#icon-phone"></use>
                                 </svg></a>
                         </div>
@@ -87,7 +87,8 @@
         <div class="container">
             <div class="about-section__container">
                 <div class="about-section__info">
-                    <h2 class="about-section__title">Перевтілюйтесь в <span class="text-brand">beauty zone!</span></h2>
+                    <h2 class="about-section__title title">Перевтілюйтесь в <span class="text-brand">beauty zone!</span>
+                    </h2>
                     <p class="about-section__text">Наша косметологічна клініка пропонує вам професійні послуги
                         з догляду за шкірою обличчя та тіла.</p>
                     <p class="about-section__text">B beauty zone ми гарантуємо найвищі стандарти якості<br> та приємний
@@ -112,28 +113,57 @@
         <div class="container">
             <div class="advantages-section__container">
                 <img class="advantages-section__background" src="./images/advantages-bg.png" alt="Блакитний градієнт">
-                <h2 class="advantages-section__title">Чому люди <br><span class="text-brand--lowercase">обирають
+                <h2 class="advantages-section__title title">Чому люди <br><span class="text-brand--lowercase">обирають
                         нас</span>
                 </h2>
                 <div class="advantages-section__cards">
                     <div class="advantages-section__card">
+                        <svg class="advantages-section__card-icon" width="44" , height="44">
+                            <use href="./images/sprite.svg#icon-atom"></use>
+                        </svg>
                         <p>Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5 років</p>
                     </div>
                     <div class="advantages-section__card">
+                        <svg class="advantages-section__card-icon" width="44" , height="44">
+                            <use href="./images/sprite.svg#icon-cosmetics"></use>
+                        </svg>
                         <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
                     </div>
                     <div class="advantages-section__card">
+                        <svg class="advantages-section__card-icon" width="44" , height="44">
+                            <use href="./images/sprite.svg#icon-crown"></use>
+                        </svg>
                         <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- <section class="procedures-section">
+    <section class="procedures-section">
         <div class="container">
-
+            <div class="procedures-section__container">
+                <h2 class="procedures-section__title title">Наші <span class="text-brand--lowercase">процедури</span>
+                </h2>
+                <div class="procedures__cards">
+                    <article class="procedures__card">
+                        <h3 class="procedures__text">Маски <br>для обличчя</h3>
+                        <img class="procedures__image" src="./images/procedures-masks.jpg"
+                            alt="Лікар накладає маску на обличчя дівчині">
+                    </article>
+                    <article class="procedures__card">
+                        <h3 class="procedures__text">Ін'єкції <br>для обличчя</h3>
+                        <img class="procedures__image" src="./images/procedures-injections.jpg"
+                            alt="Лікар виконує ін'єкцію омолодження пацієнтці">
+                    </article>
+                    <article class="procedures__card">
+                        <h3 class="procedures__text">Очищення <br>обличчя</h3>
+                        <img class="procedures__image" src="./images/procedures-cleansing.jpg"
+                            alt="Лікар спеціальним інструментом віконує очищення шкіри поцієнтки">
+                    </article>
+                </div>
+            </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="contacts-section">
         <div class="container">
 
