--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="hero-section__container">
                 <p class="hero-section__primary-text">Косметологічна клініка</p>
                 <h1 class="hero-section__title">beauty <span>Zone</span></h1>
-                <button class="button hero-section__button" type="button">Замовити дзвінок</button>
+                <button class="button hero-section__button modal-btn-open" type="button">Замовити дзвінок</button>
                 <p class="hero-section__text">Запишись та отримай безкоштовну<br> консультацію нашого косметолога</p>
             </div>
         </div>
@@ -164,12 +164,53 @@
             </div>
         </div>
     </section>
-    <!-- <section class="contacts-section">
+    <section class="contacts-section">
         <div class="container">
+            <div class="contacts-section__container">
+                <h2 class="contacts-section__title title">Як нас <span class="text-brand--lowercase">знайти</span></h2>
+                <div class="contacts-section__block">
+                    <!-- Тут буде форма -->
+                    <iframe class="contacts-section__map"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.363985041723!2d-122.44372319951084!3d37.758062733703646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e067d09e6f1%3A0xb72ce94acb6e9dc1!2sKite%20Hill!5e0!3m2!1suk!2sua!4v1701014041593!5m2!1suk!2sua"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
 
+            </div>
         </div>
-    </section> -->
+    </section>
     <!-- <footer> </footer> -->
+    <div class="backdrop is-hidden">
+        <div class="modal">
+            <button class="modal__btn-close modal-btn-close" type="button">
+                <svg class="icon-close" width="32" , height="32">
+                    <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
+            <h2>Замовити дзвінок</h2>
+            <p>Запишіться <span>безкоштовно</span> та отримайте подарунок</p>
+            <form name="modal-form">
+                <div>
+                    <label class="input__label visually-hidden" for="user-name"></label>
+                    <input class="input_control" id="user-name" name="user-name" type="text"
+                        placeholder="Ваше ім'я та прізвище" required>
+                </div>
+                <div>
+                    <label class="input__label visually-hidden" for="user-phone"></label>
+                    <input class="input_control" id="user-phone" name="user-phone" type="tel"
+                        placeholder="Ваш номер телефону" required>
+                </div>
+                <div>
+                    <label class="input__label visually-hidden" for="user-mail"></label>
+                    <input class="input_control" id="user-mail" name="user-mail" type="email"
+                        placeholder="Ваша електронна пошта" required>
+                </div>
+                <button type="button">Записатись безкоштовно</button>
+            </form>
+        </div>
+    </div>
+    <script src="./js/_modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
 
