fix modal again

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </form>
         </div>
     </div>
-    <script src="./js/_modal.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
 
