done with procedures-slider

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
     </section>
     <section class="procedures-section" id="procedures-section">
         <div class="container">
+            <h2 class="procedures-section__title title">Наші <span class="text-brand--lowercase">процедури</span>
+            </h2>
             <div class="procedures-section__container">
-                <h2 class="procedures-section__title title">Наші <span class="text-brand--lowercase">процедури</span>
-                </h2>
-                <button class="procedures__button corousel-button prev" type="button">
+                <button class="procedures__button carousel-button prev" type="button">
                     <svg width="16" height="16">
                         <use href="./images/sprite.svg#icon-Arrow"></use>
                     </svg>
@@ -178,9 +178,36 @@
                                     alt="Лікар спеціальним інструментом віконує очищення шкіри поцієнтки">
                             </article>
                         </li>
+                        <li class="swiper-slide">
+                            <article class="procedures__card">
+                                <h3 class="procedures__text">Маски <br>для обличчя</h3>
+                                <img class="procedures__image" src="./images/procedures-masks.jpg"
+                                    alt="Лікар накладає маску на обличчя дівчині">
+                            </article>
+                        </li>
+                        <li class="swiper-slide">
+                            <article class="procedures__card">
+                                <h3 class="procedures__text">Ін'єкції <br>для обличчя</h3>
+                                <img class="procedures__image" src="./images/procedures-injections.jpg"
+                                    alt="Лікар виконує ін'єкцію омолодження пацієнтці">
+                            </article>
+                        </li>
+                        <li class="swiper-slide">
+                            <article class="procedures__card">
+                                <h3 class="procedures__text">Очищення <br>обличчя</h3>
+                                <img class="procedures__image" src="./images/procedures-cleansing.jpg"
+                                    alt="Лікар спеціальним інструментом віконує очищення шкіри поцієнтки">
+                            </article>
+                        </li>
                     </ul>
+                    <div class="pagination">
+                        <span class="pagination__button"></span>
+                        <span class="pagination__button"></span>
+                        <span class="pagination__button"></span>
+                    </div>
                 </div>
-                <button class="procedures__button corousel-button next" type="button">
+
+                <button class="procedures__button carousel-button next" type="button">
                     <svg width="16" height="16">
                         <use href="./images/sprite.svg#icon-Arrow"></use>
                     </svg>
