--- a/index.html
+++ b/index.html
@@ -215,15 +215,14 @@
             </div>
         </div>
     </section>
-    <!-- <section class="contacts-section" id="contacts-section">
+    <section class="contacts-section" id="contacts-section">
         <div class="container">
             <div class="contacts-section__container">
                 <h2 class="contacts-section__title title">Як нас <span class="text-brand--lowercase">знайти</span></h2>
                 <div class="contacts-section__block">
                     <iframe class="contacts-section__map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.363985041723!2d-122.44372319951084!3d37.758062733703646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e067d09e6f1%3A0xb72ce94acb6e9dc1!2sKite%20Hill!5e0!3m2!1suk!2sua!4v1701014041593!5m2!1suk!2sua"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
+                        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                     <div class="contacts-section__form-block">
                         <p class="modal__text">Запишіться <span class="text-brand--lowercase">безкоштовно</span><br> та
@@ -257,7 +256,7 @@
 
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- <footer class="footer">
         <div class="container">
             <div class="footer__container">
@@ -310,7 +309,7 @@
     <div class="backdrop is-hidden">
         <div class="modal">
             <button class="modal__btn-close modal-btn-close" type="button">
-                <svg class="icon-close" width="32" , height="32">
+                <svg class="icon-close">
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
