finish work with adaptive

--- a/index.html
+++ b/index.html
@@ -257,18 +257,20 @@
             </div>
         </div>
     </section>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__container">
                 <nav class="footer__nav">
                     <a href="#">
-                        <div class="logo">Beauty <span>Zone</span></div>
+                        <div class="footer__logo logo">Beauty <span>Zone</span></div>
                     </a>
                     <ul class="footer__menu">
                         <li><a class="footer__address-link" href="#about-section">Про нас</a></li>
                         <li><a class="footer__address-link" href="#advantages-section">Чому ми</a></li>
                         <li><a class="footer__address-link" href="#procedures-section">Наші процедури</a></li>
                         <li><a class="footer__address-link" href="#contacts-section">Контакти</a></li>
+                        <li><a class="footer__address-link privacy" href="#" target="_blank">Політика
+                                конфіденційності</a></li>
                     </ul>
                 </nav>
                 <address class="footer__address">
@@ -280,32 +282,35 @@
                         <li><a class="footer__address-link" href="https://maps.app.goo.gl/FTAmWWpmxCksTNbc8"
                                 target="_blank">Україна, м. Київ,<br> вул.
                                 Тараса Шевченка 5</a></li>
-                        <li class="footer__socials">
-                            <a class="footer__socials-link" href="tel:+38(096)0000007">
-                                <svg class="footer__socials-icon" width="32" , height="32">
-                                    <use href="./images/sprite.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                            <a class="footer__socials-link" href="#">
-                                <svg class="footer__socials-icon" width="32" , height="32">
-                                    <use href="./images/sprite.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                            <a class="footer__socials-link" href="#">
-                                <svg class="footer__socials-icon" width="32" , height="32">
-                                    <use href="./images/sprite.svg#icon-phone"></use>
-                                </svg>
-                            </a>
-                        </li>
                     </ul>
-                    <div class="footer__address-terms">
-                        <a class=" footer__address-link" href="#" target="_blank">Політика конфіденційності</a>
-                        <p class="footer__address-copyright">&copy; 2022 Дані захищені</p>
+                    <div class="footer__socials">
+                        <a class="footer__socials-link" href="tel:+38(096)0000007">
+                            <svg class="footer__socials-icon" width="32" , height="32">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                        <a class="footer__socials-link" href="#">
+                            <svg class="footer__socials-icon" width="32" , height="32">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                        <a class="footer__socials-link" href="#">
+                            <svg class="footer__socials-icon" width="32" , height="32">
+                                <use href="./images/sprite.svg#icon-phone"></use>
+                            </svg>
+                        </a>
                     </div>
                 </address>
+                <div class="footer__terms">
+                    <a class=" footer__address-link privacy-mobile" href="#" target="_blank">Політика
+                        конфіденційності</a>
+                    <p class="footer__address-copyright">&copy; 2022 Дані захищені</p>
+                </div>
+
+
             </div>
         </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden">
         <div class="modal">
             <button class="modal__btn-close modal-btn-close" type="button">
