--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../js/procedures-slider.js"></script>
+    <script src="./js/procedures-slider.js"></script>
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
