--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <div class="logo">Beauty <span>Zone</span></div>
                 </a>
                 <ul class="header__menu">
-                    <li class="link">Про нас</li>
-                    <li class="link">Чому ми</li>
-                    <li class="link">Наші процедури</li>
-                    <li class="link">Контакти</li>
+                    <li><a class="link" href="#about-section">Про нас</a></li>
+                    <li><a class="link" href="#advantages-section">Чому ми</a></li>
+                    <li><a class="link" href="#procedures-section">Наші процедури</a></li>
+                    <li><a class="link" href="#contacts-section">Контакти</a></li>
                 </ul>
                 <div class="header__socials">
                     <a class="header__socials-link" href="tel:+38(096)0000007">
@@ -51,10 +51,11 @@
                         </button>
                         <div class="mobile-menu__logo logo">Beauty<span>Zone</span></div>
                         <ul class="mobile-menu__list">
-                            <li class="mobile-menu__link link">Про нас</li>
-                            <li class="mobile-menu__link link">Чому ми</li>
-                            <li class="mobile-menu__link link">Наші процедури</li>
-                            <li class="mobile-menu__link link">Контакти</li>
+                            <li><a class="mobile-menu__link link about" href="#about-section">Про нас</a></li>
+                            <li><a class="mobile-menu__link link advantages" href="#advantages-section">Чому ми</a></li>
+                            <li><a class="mobile-menu__link link procedures" href="#procedures-section">Наші
+                                    процедури</a></li>
+                            <li><a class="mobile-menu__link link contacts" href="#contacts-section">Контакти</a></li>
                         </ul>
                         <div class="mobile-menu__socials">
                             <a href="tel:+38(096)0000007">
